<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments.BasicDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/basicDetailsLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="64dp"
                android:src="@drawable/registration_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/reactangle_rounded_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/basicDetailsLogo">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:hint="@string/firstname"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/offWhite"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:hint="@string/lastname"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/offWhite"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/GenderLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:text="@string/gender"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintTop_toBottomOf="@id/lastNameLayout" />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/GenderLabel">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/nextButtonBasic"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/next_icon"
                    android:text="@string/next"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backButtonBasic"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/back_icon"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:visibility="invisible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>