<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments.AddressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/addressIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="32dp"
            android:src="@drawable/add_address_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="510dp"
            android:layout_margin="32dp"
            android:background="@drawable/reactangle_rounded_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressIcon">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Address1Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/address_line_1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/offWhite"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address2Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/address_line_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Address1Layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/offWhite"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/spinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address2Layout">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/stateDropDown"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address2Layout" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/cityDropDown"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address2Layout" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pincodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/pincode"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/offWhite"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/latCoordinateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pincodeLayout"
                tools:text="LATITDUDE : 150.05" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/longCoordinateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/latCoordinateTextView"
                tools:text="LONGITUDE: 120.0" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/addressNextButton"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="32dp"
                android:src="@drawable/next_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/longCoordinateTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>